# cuhk-timetable-exporter

./: .gitignore  LICENSE  README.md  my_courses.txt  pyproject.toml  requirements.txt  update_points.txt
cuhk_timetable_export/: __init__.py  cli.py  export.py  schedule_fetch.py  schedule_html.py  teaching_fetch.py  teaching_html.py
example/: example_schedule.ics
examples/: my_courses.example.txt
tests/: test_export.py  test_schedule_html.py  test_teaching_html.py
