[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cuhk-timetable-export"
version = "0.1.0"
description = "Export CUHK CUSIS class timetable to ICS, CSV, or JSON (runs locally)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["cuhk", "cusis", "timetable", "calendar", "ics", "export"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "icalendar>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
cuhk-timetable-export = "cuhk_timetable_export.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cuhk_timetable_export*"]
